# InferEdgeOrchestrator

./: .gitignore  CHANGELOG.ko.md  CHANGELOG.md  PORTFOLIO.ko.md  PORTFOLIO.md  README.ko.md  README.md  pyproject.toml
configs/: README.ko.md  README.md  agent_3_workload_demo.json  agent_3_workload_normal.json  agent_3_workload_overload.json  agent_3_workload_sustained_high_load.json  agent_multi_workload_sustained_device_local.json  agent_multi_workload_sustained_local.json  agent_multi_workload_sustained_safety_resource.json  agent_multi_workload_sustained_vision_file.json  agent_multi_workload_sustained_voice_ingress.json  from_inferedge.json  jetson_tensorrt_contention.json  jetson_tensorrt_diverse_contention.json  jetson_tensorrt_smoke.json  phase1_demo.json  phase2_onnx_demo.json  phase3_overload.json  phase4_jetson_smoke.json
docs/: agent_orchestration_summary_contract.ko.md  agent_orchestration_summary_contract.md  architecture.ko.md  architecture.md  inferedge_integration.ko.md  inferedge_integration.md  jetson_smoke_test.ko.md  jetson_smoke_test.md  operation_control.ko.md  operation_control.md  remote_dispatch_starter.ko.md  remote_dispatch_starter.md  tensorrt_backend.ko.md  tensorrt_backend.md  tensorrt_engine_build.ko.md  tensorrt_engine_build.md  tensorrt_model_diversity.ko.md  tensorrt_model_diversity.md  validation_evidence.ko.md  validation_evidence.md
examples/: inferedge_result_sample.json  remote_task_request.json  remote_task_request_http_local.json  remote_worker_registry.json  remote_worker_registry_http_local.json
tests/: test_ci_workflow.py  (+14 more)
(+44 files in other folders)
